# schemars-to-zod

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/parsers/: array.rs  enum.rs  instance_type.rs  literal.rs  mod.rs  number.rs  object.rs  schema.rs  schema_object.rs  string.rs  union.rs
tests/: array.js  double-tagged-union.js  enum.js  flatten.js  number.js  object.js  record.js  string.js  tagged-union.js  untagged-union.js
