[package]
name = "schemars-zod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dprint-core = { version = "0.63", optional = true }
dprint-plugin-typescript = { version = "0.88", optional = true }
schemars = "0.8"
serde_json = "1.0"

[features]
pretty = ["dep:dprint-core", "dep:dprint-plugin-typescript"]
inner = []

[dev-dependencies]
chrono = "0.4.31"
uuid = "1.6.1"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
