[package]
name = "schemars-to-zod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dprint-core = { version = "0.67", optional = true }
dprint-plugin-typescript = { version = "0.95", optional = true }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "1.0"
schemars = { git = "https://github.com/s-fabian/schemars" }

[features]
pretty = ["dep:dprint-core", "dep:dprint-plugin-typescript"]
inner = []

[dev-dependencies]
chrono = "0.4.42"
uuid = "1.6.1"
schemars = { git = "https://github.com/s-fabian/schemars", features = ["uuid1", "chrono"] }

#[patch.crates-io]
#schemars = { git = "https://github.com/s-fabian/schemars" }
